# opensampler-frontend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml
backend/: OpenSampler.jucer
backend/builds/macos_xcode/: Info-VST3.plist
backend/builds/macos_xcode/OpenSampler.xcodeproj/: project.pbxproj
backend/builds/windows_vs2022/: OpenSampler.sln  OpenSampler_SharedCode.vcxproj  OpenSampler_SharedCode.vcxproj.filters  OpenSampler_StandalonePlugin.vcxproj  OpenSampler_StandalonePlugin.vcxproj.filters  OpenSampler_VST3.vcxproj  OpenSampler_VST3.vcxproj.filters  OpenSampler_VST3ManifestHelper.vcxproj  resources.rc
backend/src/: plugineditor.cpp  plugineditor.hpp  pluginprocessor.cpp  pluginprocessor.hpp
scripts/: build.py  buildwebapp.py
src/: App.tsx  index.css  main.tsx
src/backend/: jsoncpp.module.ts
src/components/drum-machine/: EffectsControls.tsx  MIDIMonitor.tsx  PadControls.tsx  SampleEditor.tsx  header.tsx  index.tsx  types.ts
src/components/jucebackend/: ComboBoxState.ts  ControlParameterIndexUpdater.ts  JUCEMIDIMonitor.tsx  ListenerList.ts  MIDIDemo.tsx  MIDIKeyboard.tsx  PromiseHandler.ts  SliderState.ts  ToggleState.ts  check_native_interop.ts  index.d.ts  index.ts  nativeFunctions.ts  types.ts  useJUCEMIDI.ts
src/components/jucebackend/guicomponents/: JUCEStatusIndicator.tsx  JUCEVisualizer.tsx  useJUCEAnalysis.ts  useJUCEAudio.ts
src/components/rack/: index.tsx
src/components/settings/: index.tsx
src/components/sphui/: area.tsx  header.tsx  knob.tsx  layout.tsx  map.tsx  piano.tsx
src/components/ui/: file-dialog.tsx
src/components/welcome/: index.tsx
src/contexts/: ViewContext.tsx
src/core/: index.d.ts
src/core/dsp/: dspbridge.ts
src/core/dsp/reverb/: reverb.cpp  reverb.hpp
src/core/sampler/: parser.cpp  parser.hpp  samplerbridge.ts
src/data/: menu.ts
src/hooks/: useJUCEBridge.ts  useJUCEMIDI.ts  useJUCESettings.ts  useOSMP.ts
src/lib/: juce-bridge.ts  useJUCEMIDI.ts
src/main/: pluginprocessor.cpp
src/pages/: settings.tsx
src/routes/: index.tsx
src/utils/: preloadfont.ts
src/webview/: App.tsx  main.tsx
